--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,10 @@
 include 'robolectric-plugin'
-//, 'examples:SimpleApp'
+
+include '/robospock-sample/AndroidSampleProject'
+project(':/robospock-sample/AndroidSampleProject').name = 'android-sample'
+
+include 'robospock-sample/Robospock'
+project(':robospock-sample/Robospock').name = 'robospock-sample'
+
+
+
