--- a/robospock-sample/Robospock/build.gradle
+++ b/robospock-sample/Robospock/build.gradle
@@ -15,11 +15,10 @@ repositories {
 }
 
 apply plugin: "groovy"
-//apply plugin: 'robolectric'
+apply plugin: 'robolectric'
 
 dependencies {
     compile "org.codehaus.groovy:groovy-all:1.8.6"
     compile 'pl.polidea:robospock:0.4'
     compile project(":android-sample")
 }
-
